k8s/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-client
  template:
    metadata:
      labels:
        app: company-client
    spec:
      containers:
        - name: company-client
          image: vampzzz/director-dashboard-client:v27
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
