k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-server
  template:
    metadata:
      labels:
        app: company-server
    spec:
      containers:
        - name: company-server
          image: vampzzz/director-dashboard-server:v43
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
